infra/k8s/client-depl-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: kshitij591/client-new
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv-new
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
