infra/k8s/comments-depl-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: kshitij591/comments-new
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv-new
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
