infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: comments-outside-srv
spec: 
  type: NodePort
  selector: 
    app: comments
  ports: 
    - name: comments
      port: 4001
      targetPort: 4001
