infra/k8s/modservice-depl-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modservice-depl-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modservice
  template:
    metadata:
      labels:
        app: modservice
    spec:
      containers:
        - name: modservice
          image: kshitij591/modservice-new
---
apiVersion: v1
kind: Service
metadata:
  name: modservice-srv-new
spec:
  selector:
    app: modservice
  ports:
    - name: modservice
      protocol: TCP
      port: 4003
      targetPort: 4003
