infra/k8s/modservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: modservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modService
  template:
    metadata:
      labels:
        app: modService
    spec: 
      containers:
        - name: modservice
          image: kshitij591/modservice:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: modservice-srv
spec: 
  selector: 
    app: modService
  ports:
    - name: modservice
      protocol: TCP
      port: 4003
      targetPort: 4003
