infra/k8s/posts-depl-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kshitij591/posts-new
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv-new
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
