infra/k8s/posts-srv-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv-new
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
