infra/k8s/service1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: service1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec: 
      containers:
        - name: service1
          image: kshitij591/service1:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata: 
  name: service1-srv
spec: 
  selector: 
    app: service1
  ports:
    - name: service1
      protocol: TCP
      port: 4002
      targetPort: 4002
